# shieldtail

./: .gitignore  .ocamlformat  AGENDA.md  DECISIONS.md  Makefile  README.md  STRINGS.md  TODO.md  compile.ml  dune  dune-project  errors.ml  exprs.ml  gc.c  gc.h  graph.ml  lexer.mll  main.c  parser.mly  phases.ml  pretty.ml  runner.ml  scratch  scratch2  sequence.c  sequence.h  test.ml
input/do_err/: add_string_num.shit  apply_num.err  apply_num.racer  apply_tup.err  apply_tup.racer  arg_empty_bind.racer  arg_expected_tuple.out  arg_expected_tuple_single.racer  arg_tuple_bound_to_empty.racer  chr_bad_num.err  chr_bad_num.shit  chr_not_num.err  chr_not_num.shit  concat_not_seq.err  concat_not_seq.shit  concat_string_tuple.err  dupe_nested_tuple_binding.racer  dupe_tuple_binding.racer  duplicate_id.err  duplicate_id.racer  fromString.shit  fromString_invalid.out  fromString_invalid.shit  fromString_not_str.out  fromString_not_str.shit  fromString_tuple.shit  fun_runtime_add_bool.err  fun_runtime_add_bool.racer  if_string.shit  index_num.racer  invalid_ascii_codes_parse.err  length_index.err  length_non_seq.err  length_non_seq.shit  let_access_underscore.racer  let_destructure_overmatch.err  let_destructure_overmatch.racer  let_destructure_undermatch.racer  let_expected_tuple_single.out  let_expected_tuple_single.racer  (+25 more)
input/do_err_racer/: apply_bool.err  apply_bool.racer  arg_expected_tuple.shit  arg_expected_tuple_single.out  dupe_nested_tuple_binding.err  high_arity.err  (+21 more)
string_lib/: strings.shit  strings2.shit  strings3.shit
strings/: DECISIONS.md  README.md
(+191 files in other folders)
