(library
  (name shield_tailed_impl)
  (modules assembly compile errors exprs phases pretty runner lexer parser graph)
  (libraries ounit2 extlib unix)
  (wrapped false))

(ocamllex (modules lexer))
(menhir (modules parser))

(executable
  (name main)
  (modules main)
  (libraries shield_tailed_impl))

(test
  (name test)
  (modules test)
  (libraries shield_tailed_impl))

(env (dev (flags (:standard -warn-error -A))))

